--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourthpro",
-  "homepage": "https://Brijeshp18.github.io/pizza-delivery",
+  "homepage": "https://Brijeshp18.github.io/Order-pizzas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
