--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fourthpro",
-  "homepage": "https://Brijeshp18.github.io/Order-pizzas",
+  "homepage": "https://Brijeshp18.github.io/pizza-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,7 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages-d build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
